// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for direction: "column" 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
div {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}"
`;

exports[`getComponentCss() should return correct css for direction: "row" 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
div {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}"
`;

exports[`getComponentCss() should return correct css for direction: {"base":"column","xs":"row"} 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
div {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}
@media(min-width:480px) {
  div {
    flex-flow: row wrap;
    align-items: center;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: {"base":"row","xs":"column","s":"row","m":"column","l":"row","xl":"column"} 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
div {
  display: flex;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}
@media(min-width:480px) {
  div {
    flex-flow: column nowrap;
    align-items: stretch;
  }
}

@media(min-width:760px) {
  div {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media(min-width:1000px) {
  div {
    flex-flow: column nowrap;
    align-items: stretch;
  }
}

@media(min-width:1300px) {
  div {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media(min-width:1760px) {
  div {
    flex-flow: column nowrap;
    align-items: stretch;
  }
}
"
`;
